--- a/styles.css
+++ b/styles.css
@@ -23,8 +23,8 @@ body {
 }
 
 canvas {
-    background: #E6E6E6;
-    border: 4px solid #282828;
+    background: #913c33;
+    border: 10px solid #282828;
     border-radius: 6px;
 }
 
